--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,7 @@ Package: shinken-module-pickle-retention-file-generic
 Architecture: any
 Depends: ${misc:Depends}, shinken-common
 Breaks: shinken (<< 2~), shinken-common (<< 2~), shinken-core (<< 2~)
+Conflicts: shinken-module-retention-picklefile
 Replaces: shinken-module-retention-picklefile
 Description: Shinken pickle-retention-file-generic module
  Module for loading/saving retention data from a flat file
